add, clone de pagina de login do face

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,5 +255,29 @@ body {
     color: var(--color-logo);
 }
 
+#chatbox {
+    width: 300px;
+    height: 500px;
+    border: 1px solid black;
+}
+
+#chatlogs {
+    height: 80%;
+    overflow: auto;
+}
+
+#chat-form {
+    height: 20%;
+}
+
+#chat-input {
+    width: 80%;
+    height: 100%;
+}
+
+#send-btn {
+    width: 20%;
+    height: 100%;
+}
 
 
