--- a/assets/css/reponsiveStyle.css
+++ b/assets/css/reponsiveStyle.css
@@ -1,18 +1,171 @@
-@media (min-width: 700px) {
-    .story-firends-tablet {
-        display: flex; 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+
+:root {
+    --color-logo: #0062E0;
+    --color-logo-secundary: #ffffff;
+    --bg-color-secondary: rgba(0, 0, 0, 0.923);
+    --bg-input: rgba(112, 109, 109, 0.303);
+    --bg-color-primary: rgba(111, 108, 108, 0.767);
+
+}
+* {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow-x: hidden ; 
+      
+}
+@media (min-width: 600px){
+    body {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: 60px 40px repeat(3, 1fr);
+        grid-template-areas: 
+        "header header header header header"
+        "article-left aside aside aside article-rigth"
+        "article-left main main main article-rigth"
+        "article-left main main main article-rigth"
+        "article-left main main main article-rigth";
     }
-    .story-friends {
+    header {
+        grid-area: header;
+        width: 100%;
+        height: 60px;
+        background-color: var(--bg-color-secondary);
+        overflow: hidden;
+    }
+    /*  Config header Desktopo  */
+    .header-mobile, .navigator-mobile, .post-mobile {
+        display: none;
+    }
+    .header-desktop {
         display: flex;
-        position: relative;
+        justify-content: space-between;
+        padding: 9px;
+    }
+    .header-desktop .top-left {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         gap: 10px;
     }
-    .story-friends p {
-        position: absolute;
-        margin-left: 8px;
-        margin-top: 200px;
-        color: var(--color-logo-secundary);
-        font-weight: bold;
+    .header-desktop .top-left .logo img {
+        width: 30px;
+        display: flex;
+        justify-content: center;
     }
-   
-}
+    .top-left .input {
+        width: 160px;
+        height: 30px;
+        padding: 2px;
+    }
+    .input .search {
+        border: none;
+        border-radius: 50%;
+        padding-left: 20px;
+        width: 150px;
+        height: 20px;
+        border-radius: 100px;
+        box-shadow: 0 0 0 2px;
+        background: url(/assets/img/header/search\ icon.svg) no-repeat 5px/11px var(--bg-color-primary);
+    }
+    .search:focus {
+        outline: 2px solid var(--color-logo);
+    }
+    .search::placeholder {
+        font-size: 0.6rem;
+    }
+    .header-desktop .top-center {
+        display: flex;
+        gap: 15px;
+        justify-content: center;
+        align-items: center;
+        color: var(--color-logo-secundary);
+        font-size: 1rem;
+        margin-left: -100px;
+    }
+    .top-center .watch {
+        display: flex;
+    }
+    .top-center .watch i {
+        position: relative;
+    }
+    .top-center .watch span {
+        position: absolute;
+        margin:  0 0 3px 5px;
+    }
+    .top-center .fa-solid {
+        transition: color 0.3s;
+    }
+    .top-center .fa-solid:hover {
+        color: var(--color-logo);
+    }
+    .top-center .watch:hover {
+        color: var(--color-logo);
+    }
+    .top-right {
+        display: flex;
+        gap: 8px;
+        justify-content: center;
+        align-items: center;
+        font-size: 1rem;
+        color: var(--color-logo-secundary);
+    }
+    .top-right img {
+        width: 40px;
+        border: 2px solid var(--color-logo);
+        border-radius: 50%;
+    }
+    .top-right .right {
+        transition: color 0.3s;
+    }
+    .top-right .right:hover {
+        color: var(--color-logo);
+    }
+
+    /*  Config article-left */
+    article {
+        display: contents;
+        font-size: 1.5vw;
+    }
+    .article-left {
+        grid-area: article-left;
+        background-color: var(--bg-color-secondary);
+        color: var(--color-logo-secundary);
+        padding: 8px;        
+    }
+    .article-left .user {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-top: 20px;
+    }
+    .article-right {
+        grid-area: article-rigth;
+        background-color: var(--bg-color-secondary);
+        color: var(--color-logo-secundary);
+        padding: 8px;
+    }
+    .article-left .user-watch .watch {
+        display: flex;
+        align-items: center;
+    }
+    .article-left .user-watch .watch i {
+        position: relative;
+        
+    }
+    .article-left .user-watch .watch span {
+        position: absolute;
+        font-size: 0.3rem;
+        margin: 0 0 3px 6px;
+    }
+
+    
+
+    main {
+        grid-area: main;
+        background-color: red;  
+    }
+}   
+
