--- a/assets/css/style copy.css
+++ b/assets/css/style copy.css
@@ -251,7 +251,7 @@ body {
 .share-friend .fa-share {
     color: var(--color-logo);
 }
-
+/*
 #chatbox {
     width: 300px;
     height: 500px;
@@ -276,5 +276,9 @@ body {
     width: 20%;
     height: 100%;
 }
+*/
 
-
+.swiper {
+    width: 100%;
+    height: 300px;
+  }
