--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,24 +19,26 @@
 body {
     width: 100%;
     background-color: var(--bg-color-primary);
-    
-    /* Confg display grid */
     display: grid;
-    grid-template-columns: 100%;
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 200px 40px;
-    grid-row-gap: 1.5px;
-    /*  grid area */
     grid-template-areas: 
-    "header"
-    "aside"
-    "main"
-    ;
+    "header header header header" 
+    "aside aside aside aside"
+    "main main main main"
+    "footer footer footer footer";
 }
    /*  Config header  */
 header {
     width: 100%;
     grid-area: header;
     background-color: var(--bg-color-secondary);   
+}
+article {
+    display: none;
+}
+.header-desktop {
+    display: none;
 }
 .header-mobile .mobile-top {
     display: flex;
@@ -54,15 +56,15 @@ header {
     gap: 8px;
 }
 .img-mobile-top .logo-top {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     background-color: var(--bg-color-primary);
     justify-content: center;
     align-items: center;
     display: flex;
     color: var(--color-logo-secundary);
-    font-size: 0.8rem;
+    font-size: 2vw;
 }
 .header-mobile .navigator-mobile {
     display: flex;
@@ -82,7 +84,7 @@ header {
 .watch span {
     position: absolute;
     font-size: 0.4rem;
-    margin: 0 0 1px 12px;
+    margin: 0 0 5px 12px;
 }
 .navigator-mobile .fa-solid {
     transition: color 0.3s;
@@ -160,6 +162,7 @@ main {
     width: 100%;
 }
 main .story-status {
+    width: 100%;
     display: flex;
     justify-content: center;
     gap: 6px;
@@ -183,26 +186,29 @@ main .story-status {
     margin-top: -55px;
 }
 .add-story p {
-    font-size: 0.9rem;
-    margin-top: 25px;
+    font-size: 2vw;
+    margin-top: 15px;
     font-weight: bold;
 }
 .story-status div img {
-    max-width: 90px;
+    max-width: 100%;
     position: relative;
+    z-index: 0;
 
 }
 .story-friends {
-    display: flex;
+    display: block;
     flex-direction: column;
     text-align: left;
 }
 .story-friends p {
     margin-left: 4px;
     color: var(--color-logo-secundary);
+    font-size: 2vw;
     font-weight: bold;
+    margin-top:-25px;
     position: relative;
-    margin-top: -25px;
+    z-index: 1;
 }
 .feed .feed-info-friend {
     display: flex;
@@ -260,13 +266,6 @@ main .story-status {
 .share-friend .fa-share {
     color: #0062E0;
 } 
-
-
-@media (max-width: 412px){
-    .media600 {
-        display: none;
-    }
-}
 
 
 
