--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,8 @@ header .nav-center a.active::after {
 header .nav-center a > i {
     font-size: 1.1rem;
 }
-header .nav-right .profile {
-    background: url('/img/avatar.png');
+header .nav-right .profile img {
+    /* background: url('/img/avatar.png'); */
     height: 30px;
     width: 30px;
     border-radius: 50%;
