--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ header {
 header .nav-left, .nav-center, .nav-right {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 12px;
 }
 header .nav-left i {
@@ -80,7 +81,7 @@ header .nav-center a > i {
     font-size: 1.1rem;
 }
 header .nav-right .profile img {
-    /* background: url('/img/avatar.png'); */
+
     height: 30px;
     width: 30px;
     border-radius: 50%;
